<resources>
    <string name="app_name">SpyroTheDragon</string>
    <string name="worlds">Mundos</string>
    <string name="characters">Personajes</string>
    <string name="collectibles">Coleccionables</string>
    <string name="title_about">Acerca de</string>
    <string name="text_about">Aplicación desarrollada por \n <b>David César Fernández Aliseda.</b></string>
    <string name="accept">Aceptar</string>

    <string name="bocadillo_characters">Aquí podrás explorar a todos los personajes del mundo de Spyro</string>
    <string name="bocadillo_worlds">Aquí podrás explorar todos los mundos a los que viaja Spyro</string>
    <string name="bocadillo_collectibles">Aquí podrás explorar todos los objetos que puede coleccionar Spyro</string>
    <string name="bocadillo_about">Aquí podrás encontrar información sobre la aplicación.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Siguiente</string>
    <string name="finish_tutorial">Finalizar tutorial</string>
    <string name="skip_tutorial">Omitir tutorial</string>

    <string name="btn_comenzar">COMENZAR</string>
    <string name="btn_siguiente">Siguiente</string>
    <string name="btn_omitir">Omitir tutorial</string>
    <string name="btn_finalizar">Finalizar Tutorial</string>

    <string name="title_welcome">BIENVENIDO</string>
    <string name="description_welcome">Prepárate para explorar todos los elementos del Reino del Dragón</string>
    <string name="description_details">Aquí descubrirás los secretos de Spyro, así como los compañeros que le acompañarán, y los mundos que visitará.</string>
    <string name="description_start">Pulsa el botón COMENZAR para empezar a explorar el Reino del Dragón de la mano de Spyro.</string>

    <string name="title_congratulations">ENHORABUENA</string>
    <string name="resume">Ya has aprendido como se organiza la aplicación y cmo navegar a traves de ella.</string>
    <string name="easter_egg">Ahora es tu turno. Sigue explorando hasta encuentres los secretos que Spyro ha escondido.</string>
    <string name="tutorial">¡Has finalizado el tutorial!</string>
    <string name="start_adventure">COMENZAR LA AVENTURA</string>
</resources>